<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GitHub Viewer</string>
    <string name="action_settings">Settings</string>
	<string name="username">User</string>
	<string name="sign_in">Sign In</string>
	<string name="password">Password</string>
	<string name="sign_in_error">Sign in error.</string>
	<string name="sign_in_succeeded">Sign in succeeded</string>
	<string name="welcome_home_developers">Welcome home, developers</string>
	<string name="github_fosters">GitHub fosters a fast, flexible, and collaborative development process that lets you work on your own or with others.</string>
	<string name="title_1_signin_footer">For everything you build</string>
	<string name="text_1_signin_footer">Host and manage your code on GitHub. You can keep your work private or share it with the world.</string>
	<string name="title_2_signin_footer">A better way to work</string>
	<string name="text_2_signin_footer">From hobbyists to professionals, GitHub helps developers simplify the way they build software.</string>
	<string name="title_3_signin_footer">Millions of projects</string>
	<string name="text_3_signin_footer">GitHub is home to millions of open source projects. Try one out or get inspired to create your own.</string>
	<string name="title_4_signin_footer">One platform, from start to finish</string>
	<string name="text_4_signin_footer">With hundreds of integrations, GitHub is flexible enough to be at the center of your development process.</string>
	<string name="search">Search</string>

</resources>
